# evoman_framework

./: Ass1_EA1_SPECIALIST_Matt.py  MattMan.py  optimization_specialist_demo.py  pyproject.toml
multi_demo/: best.txt  evoman_logs.txt  evoman_solstate  results.txt
optimization_test/: best.txt  evoman_solstate  results.txt
test/: evoman_logs.txt
